fixed overflow property

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button{
   border-radius: 30px;
 }
 #list-container{
-  overflow-y: scroll;
+  
   max-height: 50vh;
 
 }
